--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-basic",
+  "name": "co-industries",
   "type": "module",
   "scripts": {
     "dev": "vinxi dev",
@@ -8,6 +8,7 @@
     "version": "vinxi version"
   },
   "dependencies": {
+    "@kobalte/core": "^0.13.3",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.13.6",
     "@solidjs/start": "^1.0.2",
