--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "vinxi build"
   functions = "netlify/functions"
-  publish = "netlify"
+  publish = "dist"
 
   ## more info on configuring this file: https://www.netlify.com/docs/netlify-toml-reference/
