--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@solidjs/router": "^0.13.6",
     "@solidjs/start": "^1.0.2",
     "motion": "^10.18.0",
+    "solid-icons": "^1.1.0",
     "solid-js": "^1.8.17",
     "vinxi": "^0.3.12"
   },
